--- a/App_GlobalResources/SiteJSConsts.pt-br.resx
+++ b/App_GlobalResources/SiteJSConsts.pt-br.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="TEXT_APPLY_CHANGES" xml:space="preserve">
-    <value>Aplicar alteraÃƒÂ§ÃƒÂµes</value>
+    <value>Aplicar alterações</value>
   </data>
 </root>
