--- a/App_LocalResources/ChangePassword.aspx.es-MX.resx
+++ b/App_LocalResources/ChangePassword.aspx.es-MX.resx
@@ -118,30 +118,30 @@
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>Cambiar contraseÃƒÂ±a</value>
+    <value>Cambiar contraseña</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
     <value>MetraNet</value>
   </data>
   <data name="tbConfirmPasswordResource1.Label" xml:space="preserve">
-    <value>Confirmar contraseÃƒÂ±a</value>
+    <value>Confirmar contraseña</value>
   </data>
   <data name="tbNewPasswordResource1.Label" xml:space="preserve">
-    <value>Nueva contraseÃƒÂ±a</value>
+    <value>Nueva contraseña</value>
   </data>
   <data name="tbOldPasswordResource1.Label" xml:space="preserve">
-    <value>ContraseÃƒÂ±a anterior</value>
+    <value>Contraseña anterior</value>
   </data>
   <data name="tbUserNameResource1.Label" xml:space="preserve">
     <value>Nombre de usuario</value>
   </data>
   <data name="TEXT_STANDARD_CHANGE_PASSWORD_MSG" xml:space="preserve">
-    <value>&lt;ul&gt;&lt;li&gt;&amp;middot;Las contraseÃƒÂ±as deben tener al menos 7 caracteres de largo&lt;/li&gt;
-               &lt;li&gt;&amp;middot;Las contraseÃƒÂ±as deben contener caracteres alfa y numÃƒÂ©ricos&lt;/li&gt;
-               &lt;li&gt;&amp;middot;Una vez que se cambian las contraseÃƒÂ±as, no pueden corresponder a ninguna de las 4 contraseÃƒÂ±as anteriores&lt;/li&gt;&lt;/ul&gt;</value>
+    <value>&lt;ul&gt;&lt;li&gt;&amp;middot;Las contraseñas deben tener al menos 7 caracteres de largo&lt;/li&gt;
+               &lt;li&gt;&amp;middot;Las contraseñas deben contener caracteres alfa y numéricos&lt;/li&gt;
+               &lt;li&gt;&amp;middot;Una vez que se cambian las contraseñas, no pueden corresponder a ninguna de las 4 contraseñas anteriores&lt;/li&gt;&lt;/ul&gt;</value>
   </data>
   <data name="TEXT_SU_NOTE" xml:space="preserve">
-    <value>&lt;br /&gt;&lt;br /&gt;&lt;b&gt;NOTA:&lt;/b&gt; como superusuario, tambiÃƒÂ©n tendrÃƒÂ¡ que cambiar la entrada en ServerAccess en cada equipo y cifrarla.</value>
+    <value>&lt;br /&gt;&lt;br /&gt;&lt;b&gt;NOTA:&lt;/b&gt; como superusuario, también tendrá que cambiar la entrada en ServerAccess en cada equipo y cifrarla.</value>
   </data>
   <data name="lblIncorrectPasswordResource1.Text" xml:space="preserve">
     <value>[es-MX]Incorrect old password</value>
