--- a/App_LocalResources/ChangePassword.aspx.it.resx
+++ b/App_LocalResources/ChangePassword.aspx.it.resx
@@ -141,7 +141,7 @@
                &amp;lt;li&amp;gt;Una volta modificata, la password non deve essere uguale a una delle 4 password precedenti&amp;lt;/li&amp;gt;&amp;lt;/ul&amp;gt;</value>
   </data>
   <data name="TEXT_SU_NOTE" xml:space="preserve">
-    <value>&amp;lt;br /&amp;gt;&amp;lt;br /&amp;gt;&amp;lt;b&amp;gt;NOTA:&amp;lt;/b&amp;gt; in qualitÃƒÂ  di utente con privilegi avanzati si dovrÃƒÂ  anche modificare la voce in ServerAccess su ogni macchina e crittografarla.</value>
+    <value>&amp;lt;br /&amp;gt;&amp;lt;br /&amp;gt;&amp;lt;b&amp;gt;NOTA:&amp;lt;/b&amp;gt; in qualità di utente con privilegi avanzati si dovrà anche modificare la voce in ServerAccess su ogni macchina e crittografarla.</value>
   </data>
   <data name="lblIncorrectPasswordResource1.Text" xml:space="preserve">
     <value>[IT]Incorrect old password</value>
