--- a/App_LocalResources/ChangePassword.aspx.pt-br.resx
+++ b/App_LocalResources/ChangePassword.aspx.pt-br.resx
@@ -124,7 +124,7 @@
     <value>MetraNet</value>
   </data>
   <data name="tbConfirmPasswordResource1.Label" xml:space="preserve">
-    <value>Senha de confirmaÃƒÂ§ÃƒÂ£o</value>
+    <value>Senha de confirmação</value>
   </data>
   <data name="tbNewPasswordResource1.Label" xml:space="preserve">
     <value>Nova senha</value>
@@ -133,15 +133,15 @@
     <value>Senha antiga</value>
   </data>
   <data name="tbUserNameResource1.Label" xml:space="preserve">
-    <value>Nome do usuÃƒÂ¡rio</value>
+    <value>Nome do usuário</value>
   </data>
   <data name="TEXT_STANDARD_CHANGE_PASSWORD_MSG" xml:space="preserve">
     <value>&lt;ul&gt;&lt;li&gt;&amp;middot;As senhas devem ter pelo menos 7 caracteres&lt;/li&gt;
-                             &lt;li&gt;&amp;middot;As senhas devem contar caracteres alfanumÃƒÂ©ricos&lt;/li&gt;
-                             &lt;li&gt;&amp;middot;As senhas, quando sÃƒÂ£o alteradas, nÃƒÂ£o podem ser nenhuma das 4 anteriores&lt;/li&gt;&lt;/ul&gt;</value>
+                             &lt;li&gt;&amp;middot;As senhas devem contar caracteres alfanuméricos&lt;/li&gt;
+                             &lt;li&gt;&amp;middot;As senhas, quando são alteradas, não podem ser nenhuma das 4 anteriores&lt;/li&gt;&lt;/ul&gt;</value>
   </data>
   <data name="TEXT_SU_NOTE" xml:space="preserve">
-    <value>&lt;br /&gt;&lt;br /&gt;&lt;b&gt;OBS.:&lt;/b&gt; Como um Super UsuÃƒÂ¡rio, vocÃƒÂª deve alterar a entrada no ServerAccess em cada mÃƒÂ¡quina e criptografÃƒÂ¡-la.</value>
+    <value>&lt;br /&gt;&lt;br /&gt;&lt;b&gt;OBS.:&lt;/b&gt; Como um Super Usuário, você deve alterar a entrada no ServerAccess em cada máquina e criptografá-la.</value>
   </data>
   <data name="lblIncorrectPasswordResource1.Text" xml:space="preserve">
     <value>[pt-BR]Incorrect old password</value>
