--- a/BE/App_LocalResources/BE.aspx.fr.resx
+++ b/BE/App_LocalResources/BE.aspx.fr.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="lblNoBEs.Text" xml:space="preserve">
-    <value>Aucun ÃƒÂ©lÃƒÂ©ment ÃƒÂ  afficher</value>
+    <value>Aucun élément à afficher</value>
   </data>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>Liste des entitÃƒÂ©s de modÃƒÂ©lisation mÃƒÂ©tier</value>
+    <value>Liste des entités de modélisation métier</value>
   </data>
 </root>
