--- a/App_GlobalResources/JSConsts.pt-br.resx
+++ b/App_GlobalResources/JSConsts.pt-br.resx
@@ -285,6 +285,36 @@
   <data name="TEXT_APPROVALS_STATE_EXPLANATION_SUBMITTER" xml:space="preserve">
     <value>Como o solicitante desta alteração pendente, é possível 'Rejeitar' esta alteração que irá removê-la da deliberação.</value>
   </data>
+    <data name="TEXT_RATE_UPDATE" xml:space="preserve">
+        <value>Rate Update</value>
+    </data>
+  <data name="TEXT_ACCOUNT_UPDATES" xml:space="preserve">
+        <value>Account Updates</value>
+    </data>
+  <data name="TEXT_PRODUCT_OFFERING_UPDATE" xml:space="preserve">
+        <value>Product Offering Update</value>
+    </data>
+  <data name="TEXT_SUBSCRIPTION_ADD" xml:space="preserve">
+        <value>Subscription Add</value>
+    </data>
+  <data name="TEXT_SUBSCRIPTION_UPDATE" xml:space="preserve">
+        <value>Subscription Update</value>
+    </data>
+  <data name="TEXT_ADD_MEMBER_HIERARCHIES" xml:space="preserve">
+        <value>Add Member Hierarchies</value>
+    </data>
+  <data name="TEXT_GROUP_SUBSCRIPTION_ADD_MEMBERS" xml:space="preserve">
+        <value>Add members to group</value>
+    </data>
+  <data name="TEXT_GROUP_SUBSCRIPTION_DELETE_MEMBERS" xml:space="preserve">
+        <value>Delete members in group</value>
+    </data>
+  <data name="TEXT_GROUP_SUBSCRIPTION_UPDATE_MEMBERS" xml:space="preserve">
+        <value>Update members in group</value>
+    </data>
+  <data name="TEXT_GROUP_SUBSCRIPTION_UNSUBSCRIBE_MEMBERS" xml:space="preserve">
+        <value>Unsubscribe members from group subscription</value>
+    </data>
   <data name="TEXT_AUDIT_HISTORY_FAILED" xml:space="preserve">
     <value>Histórico de auditoria para número de casos de transações com falha</value>
   </data>
